[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entities/Shared/Behaviors/Stunned.gd" type="Script" id=1]

[node name="Stunned" type="Node2D"]
script = ExtResource( 1 )

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="ColorStun" type="Tween" parent="."]

[node name="ColorUnstun" type="Tween" parent="."]

[node name="ColorFinish" type="Tween" parent="."]

[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="tween_completed" from="ColorStun" to="." method="_on_ColorStun_tween_completed"]
[connection signal="tween_completed" from="ColorUnstun" to="." method="_on_ColorUnstun_tween_completed"]
[connection signal="tween_completed" from="ColorFinish" to="." method="_on_ColorFinish_tween_completed"]
